# cangov-contracts-data-web

./: .gitignore  README.md  canada-gov-contracts-extraction.ipynb  canadabuy_partners.ipynb  pyproject.toml
data/: us_goods_contracts_2023_2026.csv  us_services_contracts_2023_2026.csv
docs/: Smith-CANAI-SSC Objectives.docx  data_dictionary.xlsx
src/: canadabuys_partner_scraper.py
