[project]
name = "cangov-contracts-data-web"
version = "0.1.0"
description = "Data ingestion, analysis, and web interface for Government of Canada contracts data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Deenu" }
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "duckdb>=1.0.0",
    "pydantic>=2.7.0",
    "streamlit>=1.35.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "plotly>=5.22.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "missingno>=0.5.2",
]

[dependency-groups]
dev = [
    "black>=24.4.0",
    "ruff>=0.5.0",
    "pytest>=8.2.0",
    "mypy>=1.10.0",
]

[tool.uv]
package = false
managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
